fix: photo was not centered

--- a/src/components/landing/TeamMember.module.scss
+++ b/src/components/landing/TeamMember.module.scss
@@ -15,6 +15,8 @@
       height: 100%;
       object-fit: cover;
       border-radius: 50%;
+      top: 0;
+      left: 0;
     }
     .imageFont {
       position: absolute;
